--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -51,6 +51,7 @@
   $h110:$height/110 !global;
   $h120:$height/120 !global;
   $h144:$height/144 !global;
+  $h200:$height/200 !global;
   $h224:$height/224 !global;
   $h240:$height/240 !global;
   $h720:$height/720 !global;
