Adding SVG for various countries

--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,4 +1,11 @@
 $UTF8_BLACK_STAR: '\2605';
+$UTF8_COUNTRY_BRB: '\e611';
+$UTF8_COUNTRY_PHL: '\e610';
+$UTF8_COUNTRY_TJK: '\e609';
+$UTF8_COUNTRY_PNG: '\e608';
+$UTF8_COUNTRY_BRN: '\e607';
+$UTF8_COUNTRY_IND: '\e606';
+$UTF8_COUNTRY_ERI: '\e605';
 $UTF8_COUNTRY_ATG: '\e604';
 $UTF8_COUNTRY_MYS: '\e603';
 $UTF8_COUNTRY_AFG: '\e602';
