--- a/app/styles/_flags/brb.scss
+++ b/app/styles/_flags/brb.scss
@@ -2,4 +2,15 @@
 // http://www.crwflags.com/fotw/flags/bb.html
 @mixin flag-brb() {
   @include ratio(2 / 3);
+  $unit: $h4;
+  $blue: #00267f;
+  $yellow: #ffc726;
+  $black: #000;
+  $symbol: $UTF8_COUNTRY_BRB;
+  $symbol-height: 2 * $unit;
+
+  @include three-columns($blue, $yellow, $blue);
+  &:before {
+    @include centered-symbol($symbol, $black, $symbol-height);
+  }
 };
