--- a/app/styles/_flags/phl.scss
+++ b/app/styles/_flags/phl.scss
@@ -2,6 +2,8 @@
 // http://www.crwflags.com/fotw/flags/ph.html
 // http://www.vexilla-mundi.com/philippines_flag.html
 @mixin flag-phl() {
+  // Note: The three small stars should be slightly rotated, on this version
+  // they are not
   @include ratio(1 / 2);
   $unit: $h90;
   $blue: #0033a0;
@@ -14,7 +16,6 @@
   $triangle-width: sqrt($half-triangle-hypotenuse * $half-triangle-hypotenuse - $half-triangle-small-size * $half-triangle-small-size) * 1px;
 
   // Positions of the big star, according to the flag
-  $symbols: $UTF8_BLACK_STAR+$UTF8_BLACK_STAR+"\A"+$UTF8_BLACK_STAR;
   $star-big-size: 38 * $unit;
   $star-big-left: $triangle-width * 1 / 3;
   $star-big-right-from-tip-of-triangle: $triangle-width * 2 / 3;
@@ -29,40 +30,28 @@
 
   @include two-lines($blue, $red);
 
-  // &:after {
-  //   // @include triangle($white, $triangle-width);
-  //   // We place the big star inside the triangle. This technique uses negative
-  //   // text-indent, and line-height:0 to position the star.
-  //   // content: $UTF8_COUNTRY_PHL;
-  //   // text-indent: -$star-big-right-from-tip-of-triangle - $star-big-size / 2;
-  //   // line-height: 0;
-  //   // color: $yellow;
-  //   // font-size: $star-big-size;
-  // }
-
-  &:before {
-    // We add three stars, on two lines. By carefully hanlding the :first-letter
-    // and :first-line, I'll be able to style them independently
-    @include symbol($symbols, green, $star-small-size, 0, -$star-small-size / 2);
-    white-space: pre; // Needed for :first-line to apply
-    position: relative; // Needed for :first-letter to apply
-    // but then, no more rotate
-    // Top star
-    // text-shadow: 
-    //             $star-small-distance-short $star-small-distance-long 0px $yellow;
-    transform: rotate(12deg);
-  }
-  &:first-letter {
-    // color: transparent;
-    background: blue;
-    display: block;
+  // The :before will simply contain the small stars, using text-shadow to
+  // duplicate them.
+  &:after {
+    @include symbol($UTF8_BLACK_STAR, transparent, $star-small-size, 0, 0);
     text-shadow: 
-                50px 30px 0px green;
+                $star-small-distance-short $star-small-distance-long 0px $yellow,
+                $star-small-distance-short ($height - $star-small-distance-long) 0px $yellow,
+                ($triangle-width - $star-small-distance-from-angle) $h2 0px $yellow
+              ;
   }
-  // &:first-line {
-  //   color: transparent;
-  //   text-shadow: 
-  //               30px 45px 0px red;
-  // }
-  
+  // The :after will contain the triangle, as well as the big star. The star is
+  // positionned at the center of the height, but slightly to the left. We
+  // manage to handle that with a negative text-indent. We also use a lower
+  // z-index that the before to put it below the small stars.
+  &:before {
+    @include triangle($white, $triangle-width);
+    // We place the big star inside the triangle. This technique uses negative
+    // text-indent, and line-height:0 to position the star.
+    content: $UTF8_COUNTRY_PHL;
+    text-indent: -$star-big-right-from-tip-of-triangle - $star-big-size / 2;
+    line-height: 0;
+    color: $yellow;
+    font-size: $star-big-size;
+  }
 };
