--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -45,6 +45,7 @@
   $h60:$height/60 !global;
   $h72:$height/72 !global;
   $h80:$height/80 !global;
+  $h84:$height/84 !global;
   $h90:$height/90 !global;
   $h92:$height/92 !global;
   $h96:$height/96 !global;
