--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@
 @import '_helpers/lines';
 @import '_helpers/columns';
 @import '_helpers/circles';
+@import '_helpers/squares';
 @import '_helpers/triangles';
 @import '_helpers/symbols';
 
@@ -88,6 +89,7 @@
 @import '_flags/dza';
 @import '_flags/ecu';
 @import '_flags/egy';
+@import '_flags/eng';
 @import '_flags/eri';
 @import '_flags/esh';
 @import '_flags/esp';
@@ -213,6 +215,7 @@
 @import '_flags/rus';
 @import '_flags/rwa';
 @import '_flags/sau';
+@import '_flags/sct';
 @import '_flags/sdn';
 @import '_flags/sen';
 @import '_flags/sgp';
