Adding United Kingdom

--- a/app/styles/_flags/gbr.scss
+++ b/app/styles/_flags/gbr.scss
@@ -1,5 +1,59 @@
 // United Kingdom of Great Britain and Northern Ireland
 // http://www.crwflags.com/fotw/flags/gb.html
 @mixin flag-gbr() {
-  @include ratio(2 / 3);
+  @include ratio(1 / 2);
+  $unit: $h30;
+  $blue: #012169;
+  $red: #c8102e;
+  $white: #FFF;
+
+  // England (red cross with white borders)
+  $eng-red-size: 6 * $unit;
+  $eng-red-left: 27 * $unit;
+  $eng-red-top: 12 * $unit;
+  $eng-white-size: 10 * $unit;
+  $eng-white-left: 25 * $unit;
+  $eng-white-top: 10 * $unit;
+
+  // Scotland (white diagonal stripes)
+  $sct-size: 6 * $unit;
+  $alpha: atan($height / $width) * 1deg;
+  $alpha-reverse: 90deg - $alpha;
+  $sct-padding-big: ($sct-size / 2) / sin($alpha);
+  $sct-padding-small: ($sct-size / 2) / sin($alpha-reverse);
+  $sct-blue-height: $height - $sct-padding-small;
+  $sct-blue-width: $width - $sct-padding-big;
+  $sct-blue-alpha: atan($sct-blue-width / $sct-blue-height) * 1deg;
+  $sct-distance: sin($sct-blue-alpha) * $sct-blue-height; 
+
+  // Ireland (red diagonals)
+  $irl-size: 2 * $unit;
+  $irl-padding-big: $irl-size / sin($alpha);
+  $irl-padding-small: $irl-size / sin($alpha-reverse);
+  $irl-blue-height: $height - $irl-padding-small;
+  $irl-blue-width: $width - $irl-padding-big;
+  $irl-blue-alpha: atan($irl-blue-width / $irl-blue-height) * 1deg;
+  $irl-distance: sin($irl-blue-alpha) * $irl-blue-height; 
+
+  background:
+                    // England
+                    h-stripe($red, $eng-red-size, $eng-red-top),
+                    v-stripe($red, $eng-red-size, $eng-red-left),
+                    // England white stripes
+                    h-stripe($white, $eng-white-size, $eng-white-top),
+                    v-stripe($white, $eng-white-size, $eng-white-left),
+
+                    // Ireland
+                    stripe-constrained(90deg - $irl-blue-alpha, $red, $irl-size, $irl-distance, $w2),
+                    stripe-constrained($irl-blue-alpha - 90deg, $red, $irl-size, $irl-distance + $irl-size, $w2, 100%, $w2),
+                    stripe-constrained(90deg - $irl-blue-alpha, $red, $irl-size, $irl-distance + $irl-size, $w2, 100%, $w2, $h2),
+                    stripe-constrained($irl-blue-alpha - 90deg, $red, $irl-size, $irl-distance, $w2, 100%, 0, $h2),
+
+                    // Scotland
+                    stripe(90deg - $sct-blue-alpha, $white, $sct-size, $sct-distance),
+                    stripe(90deg + $sct-blue-alpha, $white, $sct-size, $sct-distance),
+
+                    // Background
+                    $blue
+                  ;
 };
