--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -56,6 +56,7 @@
   $h200:$height/200 !global;
   $h224:$height/224 !global;
   $h240:$height/240 !global;
+  $h432:$height/432 !global;
   $h720:$height/720 !global;
   $h2880:$height/2880 !global;
 
