--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,7 +14,7 @@
 @import '_helpers/lines';
 @import '_helpers/columns';
 @import '_helpers/circles';
-@import '_helpers/squares';
+@import '_helpers/rectangles';
 @import '_helpers/triangles';
 @import '_helpers/symbols';
 
