--- a/app/styles/_flags/qat.scss
+++ b/app/styles/_flags/qat.scss
@@ -1,5 +1,33 @@
 // Qatar
 // http://www.crwflags.com/fotw/flags/qa.html
+// http://www.vexilla-mundi.com/qatar_flag.html
 @mixin flag-qat() {
-  @include ratio(2 / 3);
+  @include ratio(11 / 28);
+  $unit: $h198;
+  $red: #8a1538;
+  $white: #FFF;
+  $triangle-height: 22 * $unit;
+  $triangle-width: 36 * $unit;
+  $white-stripe-width: 144 * $unit;
+
+  background-color: $red;
+  background-image:
+                    v-stripe($white, $white-stripe-width)
+                  ;
+  &:before {
+    @include rectangle($white, $triangle-width, $height, $white-stripe-width - 2px);
+    $triangle-padding: $triangle-height / 2;
+    -webkit-clip-path: polygon(
+                         0px 0px, 
+                         $triangle-width (1 * $triangle-padding), 0px (2 * $triangle-padding),
+                         $triangle-width (3 * $triangle-padding), 0px (4 * $triangle-padding),
+                         $triangle-width (5 * $triangle-padding), 0px (6 * $triangle-padding),
+                         $triangle-width (7 * $triangle-padding), 0px (8 * $triangle-padding),
+                         $triangle-width (9 * $triangle-padding), 0px (10 * $triangle-padding),
+                         $triangle-width (11 * $triangle-padding), 0px (12 * $triangle-padding),
+                         $triangle-width (13 * $triangle-padding), 0px (14 * $triangle-padding),
+                         $triangle-width (15 * $triangle-padding), 0px (16 * $triangle-padding),
+                         $triangle-width (17 * $triangle-padding), 0px (18 * $triangle-padding)
+                      );
+  }
 };
